--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Tour of Heroes</title>
+    <title>VueTourOfHeroes</title>
     <!--<link rel="stylesheet" type="text/css" href="./src/style.css">-->
+    <link rel="icon" type="image/png" href="vue-js.png">
   </head>
   <body>
     <div id="app">
